--- a/.github/workflows/WebPageToMarkdown.yml
+++ b/.github/workflows/WebPageToMarkdown.yml
@@ -25,11 +25,11 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
       - name: Crawl pages and generate Markdown files
-        uses: luojiyin1987/article-webpage-to-markdown-action@v0.1.22
+        uses: luojiyin1987/article-webpage-to-markdown-action@v0.1.23
         with:
           newsLink: '${{ github.event.issue.Body }}'
           markDownFilePath: './chinese/articles/'
-          github_token: ${{secrets.GITHUB_TOKEN}}
+          githubToken: ${{secrets.GITHUB_TOKEN}}
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4.9.2
         with:
