--- a/.github/workflows/WebPageToMarkdown.yml
+++ b/.github/workflows/WebPageToMarkdown.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           newsLink: '${{ github.event.issue.Body }}'
           markDownFilePath: './chinese/articles/'
-          githubToken: ${{secrets.GITHUB_TOKEN}}
+          githubToken: ${{ github.token }}
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4.9.2
         with:
